# SoundSnail

./: .gitignore  CMakeLists.txt  README.md
soundsnail_framework/audio_player_module/model/hpp/: AbstractAudioPlayer.hpp  AudioPlayerState.hpp  PlaybackRate.hpp
